# bigfoot

./: CMakeLists.txt  Doxyfile  README.md  get-version.sh  index.html  params.json  performance.R  test-performance.sh  test-rw-15mi.sh
build_aux/cmake/Modules/: FindArmadillo.cmake
src/: CMakeLists.txt
src/bigfoot/: CMakeLists.txt  bigfoot.cpp  bigfoot.hpp  config.hpp.cmake
src/tools/: CMakeLists.txt  bfprint.cpp  bftest.cpp  bftozeros.cpp
src/tools/bfprint/: CMakeLists.txt  bfprint.cpp
src/tools/bfpulsegen/: CMakeLists.txt  bfpulsegen.cpp
src/tools/bftest/: CMakeLists.txt  bftest.cpp
src/tools/bftozeros/: CMakeLists.txt  bftozeros.cpp
